--- a/deb/director/control
+++ b/deb/director/control
@@ -1,5 +1,5 @@
 Package: symmetrical-meme-director
-Version: v0.1
+Version: 0.1
 Architecture: all
 Maintainer: johan jordaan <johan@1337coders.com>
 Description: symmetrical-meme-director
